@@ -1,3 +1,14 @@
+2008-09-03  Sven Herzberg  <sven@imendio.com>
+
+	Properly indent function signatures
+	based on a patch by Christian Dywan
+
+	* src/sapwood-pixmap.c,
+	* src/sapwood-rc-style.c,
+	* src/sapwood-rc-style.h,
+	* src/sapwood-style.c,
+	* src/theme-pixbuf.c: properly indent function signatures
+
 2008-09-02  Sven Herzberg  <sven@imendio.com>
 
 	Added a space before opening parenthesis
